add some javascrit for loop and function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul class="menu menu-horizontal px-1 gap-3 items-center">
                     <div class="flex items-center gap-2 bg-[#F4F7FF] p-2 rounded-3xl">
                         <img class="w-5 h-5 object-cover" src="./assets/checkbox.png" alt="">
-                        <h2 class="text-xl font-bold">23</h2>
+                        <h2 id="quantity" class="text-xl font-bold">23</h2>
                     </div>
                     <img class="w-6 h-6 object-cover" src="./assets/theme-btn.png" alt="">
                 </ul>
@@ -37,7 +37,7 @@
                         <img class="w-7 h-7 object-cover" src="./assets/checkbox.png" alt="">
                         <div>
                             <p class="text-gray-500">Task Assingment</p>
-                            <h2 class="text-3xl font-bold">06</h2>
+                            <h2 id="quantity-2" class="text-3xl font-bold">06</h2>
                         </div>
                     </div>
                     <div id="Blog-click"
@@ -59,7 +59,7 @@
                         <hr class="my-3">
                         <div class="flex justify-between">
                             <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
-                            <button class="btn bg-[#3752FD] text-white">Completed</button>
+                            <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
                     <div class="bg-[#F4F7FF]  p-3 m-3 rounded-md">
@@ -69,7 +69,7 @@
                         <hr class="my-3">
                         <div class="flex justify-between">
                             <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
-                            <button class="btn bg-[#3752FD] text-white">Completed</button>
+                            <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
                     <div class="bg-[#F4F7FF]  p-3 m-3 rounded-md">
@@ -79,7 +79,7 @@
                         <hr class="my-3">
                         <div class="flex justify-between">
                             <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
-                            <button class="btn bg-[#3752FD] text-white">Completed</button>
+                            <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
                     <div class="bg-[#F4F7FF] p-3 m-3 rounded-md">
@@ -89,7 +89,7 @@
                         <hr class="my-3">
                         <div class="flex justify-between">
                             <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
-                            <button class="btn bg-[#3752FD] text-white">Completed</button>
+                            <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
                     <div class="bg-[#F4F7FF]  p-3 m-3 rounded-md">
@@ -99,7 +99,7 @@
                         <hr class="my-3">
                         <div class="flex justify-between">
                             <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
-                            <button class="btn bg-[#3752FD] text-white">Completed</button>
+                            <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
                     <div class="bg-[#F4F7FF]  p-3 m-3 rounded-md">
@@ -109,7 +109,7 @@
                         <hr class="my-3">
                         <div class="flex justify-between">
                             <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
-                            <button class="btn bg-[#3752FD] text-white">Completed</button>
+                            <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
                 </div>
