add icon and more javascript code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Board</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
@@ -54,7 +55,7 @@
                 <div class="grid grid-cols-3">
                     <div class="bg-[#F4F7FF]  p-3 m-3 rounded-md">
                         <button class="btn">Shop Ease</button>
-                        <h3 class="text-xl font-bold">Fix Mobile Button Issou</h3>
+                        <h3 class=" text-xl font-bold">Fix Mobile Button Issou</h3>
                         <p class="bg-white p-2 text-gray-500 rounded-md m-2">Lorem, ipsum dolor <br> sit amet consectetur adipisicing.</p>
                         <hr class="my-3">
                         <div class="flex justify-between">
@@ -68,7 +69,7 @@
                         <p class="bg-white p-2 text-gray-500 rounded-md m-2">Store the user's preference in <br> localStorage, update  variables </p>
                         <hr class="my-3">
                         <div class="flex justify-between">
-                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
+                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">26 March 2025</span></p>
                             <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
@@ -78,7 +79,7 @@
                         <p class="bg-white p-2 text-gray-500 rounded-md m-2">Store the user's preference in <br> localStorage, update  variables <p>
                         <hr class="my-3">
                         <div class="flex justify-between">
-                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
+                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">28 March 2025</span></p>
                             <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
@@ -88,7 +89,7 @@
                         <p class="bg-white p-2 text-gray-500 rounded-md m-2">Store the user's preference in <br> localStorage, update  variables </p>
                         <hr class="my-3">
                         <div class="flex justify-between">
-                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
+                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">10 April 2025</span></p>
                             <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
@@ -98,7 +99,7 @@
                         <p class="bg-white p-2 text-gray-500 rounded-md m-2">Store the user's preference in <br> localStorage, update  variables </p>
                         <hr class="my-3">
                         <div class="flex justify-between">
-                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
+                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">22 Octobar 2025</span></p>
                             <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
@@ -108,7 +109,7 @@
                         <p class="bg-white p-2 text-gray-500 rounded-md m-2">Store the user's preference in <br> localStorage, update  variables </p>
                         <hr class="my-3">
                         <div class="flex justify-between">
-                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">21 March 2025</span></p>
+                            <p class="text-gray-400">Dadline <br> <span class="font-bold text-gray-600">29 septembar 2025</span></p>
                             <button class="btn bg-[#3752FD] text-white main-btn">Completed</button>
                         </div>
                     </div>
@@ -119,8 +120,11 @@
                     <img src="./assets/activity.png" alt="">
                     <p class="">Activity Log</p>
                 </div>
-                <button class="btn bg-[#3752FD] text-white my-4">Clear History</button>
+                <button id="hidde-btn" class="btn bg-[#3752FD] text-white my-4">Clear History</button>
                 <hr class="my-4">
+                <div id="card-contenar">
+                    
+                </div>
             </div>
         </div>
     </main>
