--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <img class="w-5 h-5 object-cover" src="./assets/checkbox.png" alt="">
                         <h2 id="quantity" class="text-xl font-bold">23</h2>
                     </div>
-                    <img class="w-6 h-6 object-cover" src="./assets/theme-btn.png" alt="">
+                    <img id="btn-color" class="w-6 h-6 object-cover" src="./assets/theme-btn.png" alt="">
                 </ul>
             </div>
         </div>
